--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -5,8 +5,7 @@ applications:
   - route: timesheets-pal-distributed.apps.evans.pal.pivotal.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-distributed.apps.evans.pal.pivotal.io
-    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+  env    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
