--- a/applications/backlog-server/build.gradle
+++ b/applications/backlog-server/build.gradle
@@ -3,4 +3,5 @@ apply from: "$projectDir/../server.gradle"
 dependencies {
     compile project(":components:backlog")
     compile "org.springframework.cloud:spring-cloud-commons:$springCloudCommonsVersion"
+    compile "io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker"
 }
